// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block Details > renders the Block Details component 1`] = `
<div
  class="dusk-card data-card block-details"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Block Details
    </h1>
     
  </header>
   
  <div
    class="data-card__content"
  >
    <dl
      class="block-details__list"
    >
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The height of the block indicates the length of the block chain and is increased with each additional block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          height
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default dusk-icon-button block-details__list-anchor"
          href="/some-base-path/blocks/block?id=07b74b35c2c7cf8f41426cd0870bafa1a2c7adee3fdd876643548096186fc4cb"
        >
          <svg
            class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
            />
          </svg>
          
           
          
          
        </a>
         
        495,868
         
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default dusk-icon-button block-details__list-anchor"
          href="/some-base-path/blocks/block?id=6011556208a85e6001bd01ccbf936486b91318a7f6cbcf7ab810adf6fae34204"
        >
          <svg
            class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
            />
          </svg>
          
           
          
          
        </a>
         
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The hash for the header of the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          hash
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <span
          class="block-details__hash"
          slot="definition"
        >
          bd5c99bb720b03500e89f103fe66113ba62f2e124ed9651563f38fd15977719f
           
          <div
            class="dusk-copy-button"
          >
            <button
              aria-label="Copy Address"
              class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button dusk-copy-button"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="Copy to clipboard"
              type="button"
            >
              <svg
                class="dusk-icon dusk-icon--size--default dusk-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                />
              </svg>
              
               
              
            </button>
          </div>
           
        </span>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The date and time the block was created"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          timestamp
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <time
          class="dusk-relative-time block-details__list-timestamp"
          datetime="2024-04-16T20:07:02.000Z"
          slot="definition"
        >
          Tue, 16 Apr 2024 20:07:02 GMT (last month)
          
        </time>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The number of transactions included in the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          transactions
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        2
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The total fees paid for the transactions in the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block fees paid
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        0.000580718
         DUSK
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The reward allocated to the block generator can fluctuate between 70-80% of the total reward and the flexible 10% can end up being burnt if there's no unanimous vote on a block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block reward
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        16
         DUSK
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The block gas limit"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block gas limit
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        5,000,000,000
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The amount of gas used generating the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          gas used
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        580,718
         
        <div
          aria-label="Gas Used"
          class="dusk-progress-bar block-details__gas-used"
          role="progressbar"
        >
          <div
            class="dusk-progress-bar__filler"
            style="width: 0.01161436%"
          />
        </div>
         
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The average gas price for the transactions within the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          average gas price
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        1
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The state root hash"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          state root hash
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <span
          class="block-details__hash"
          slot="definition"
        >
          20bb0a677b93f084afadfd34bec3ac3feee33a020b81d9549afa2268e8543acb
           
          <div
            class="dusk-copy-button"
          >
            <button
              aria-label="Copy Address"
              class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button dusk-copy-button"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="Copy to clipboard"
              type="button"
            >
              <svg
                class="dusk-icon dusk-icon--size--default dusk-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                />
              </svg>
              
               
              
            </button>
          </div>
           
        </span>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The block header information"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          <div
            class="block-details__switch-wrapper"
          >
            header

          
            <div
              aria-checked="false"
              aria-disabled="false"
              class="dusk-switch block-details__payload-switch dusk-switch--on-surface"
              role="switch"
              tabindex="0"
            />
          </div>
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        
      </dd>
    </dl>
  </div>
  
   
</div>
`;

exports[`Block Details > should render the Block Details component with the payload visible 1`] = `
<div
  class="dusk-card data-card block-details"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Block Details
    </h1>
     
  </header>
   
  <div
    class="data-card__content"
  >
    <dl
      class="block-details__list"
    >
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The height of the block indicates the length of the block chain and is increased with each additional block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          height
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default dusk-icon-button block-details__list-anchor"
          href="/some-base-path/blocks/block?id=07b74b35c2c7cf8f41426cd0870bafa1a2c7adee3fdd876643548096186fc4cb"
        >
          <svg
            class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
            />
          </svg>
          
           
          
          
        </a>
         
        495,868
         
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--default dusk-icon-button block-details__list-anchor"
          href="/some-base-path/blocks/block?id=6011556208a85e6001bd01ccbf936486b91318a7f6cbcf7ab810adf6fae34204"
        >
          <svg
            class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
            />
          </svg>
          
           
          
          
        </a>
         
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The hash for the header of the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          hash
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <span
          class="block-details__hash"
          slot="definition"
        >
          bd5c99bb720b03500e89f103fe66113ba62f2e124ed9651563f38fd15977719f
           
          <div
            class="dusk-copy-button"
          >
            <button
              aria-label="Copy Address"
              class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button dusk-copy-button"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="Copy to clipboard"
              type="button"
            >
              <svg
                class="dusk-icon dusk-icon--size--default dusk-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                />
              </svg>
              
               
              
            </button>
          </div>
           
        </span>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The date and time the block was created"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          timestamp
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <time
          class="dusk-relative-time block-details__list-timestamp"
          datetime="2024-04-16T20:07:02.000Z"
          slot="definition"
        >
          Tue, 16 Apr 2024 20:07:02 GMT (last month)
          
        </time>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The number of transactions included in the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          transactions
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        2
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The total fees paid for the transactions in the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block fees paid
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        0.000580718
         DUSK
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The reward allocated to the block generator can fluctuate between 70-80% of the total reward and the flexible 10% can end up being burnt if there's no unanimous vote on a block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block reward
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        16
         DUSK
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The block gas limit"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          block gas limit
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        5,000,000,000
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The amount of gas used generating the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          gas used
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        580,718
         
        <div
          aria-label="Gas Used"
          class="dusk-progress-bar block-details__gas-used"
          role="progressbar"
        >
          <div
            class="dusk-progress-bar__filler"
            style="width: 0.01161436%"
          />
        </div>
         
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The average gas price for the transactions within the block"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          average gas price
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        1
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The state root hash"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          state root hash
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <span
          class="block-details__hash"
          slot="definition"
        >
          20bb0a677b93f084afadfd34bec3ac3feee33a020b81d9549afa2268e8543acb
           
          <div
            class="dusk-copy-button"
          >
            <button
              aria-label="Copy Address"
              class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button dusk-copy-button"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="Copy to clipboard"
              type="button"
            >
              <svg
                class="dusk-icon dusk-icon--size--default dusk-button__icon"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                />
              </svg>
              
               
              
            </button>
          </div>
           
        </span>
      </dd>
      <dt
        class="details-list__term"
      >
        <div
          class="details-list__term-layout"
        >
          <svg
            class="dusk-icon dusk-icon--size--default detail-list__help"
            data-tooltip-id="main-tooltip"
            data-tooltip-place="top"
            data-tooltip-text="The block header information"
            data-tooltip-type="info"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
          
           
          <div
            class="block-details__switch-wrapper"
          >
            header

          
            <div
              aria-checked="true"
              aria-disabled="false"
              class="dusk-switch block-details__payload-switch dusk-switch--on-surface"
              role="switch"
              tabindex="0"
            />
          </div>
        </div>
      </dt>
       
      <dd
        class="details-list__definition"
      >
        <div
          class="dusk-card block-details__payload dusk-card--on-surface"
        >
           
          <pre>
            {
  "version": 1,
  "height": 21455,
  "timestamp": 1726246600,
  "prev_block_hash": "940d0a9a35f30103554e9d74ae504d4a3f679bda7b925df9bff1002424a5a748",
  "seed": "a6b11ca51a17bbe4899e3a924d2c7e087d2836800f276db9cf3e36516b4bf9a99aa8507567cbc3ab9a2c3f0390a47748",
  "state_hash": "70a544fbea9914958dc3dba1824956a1b6de37fbfbc42d2c3e219793b8ce8017",
  "event_hash": "02aee0f39c5936122a5ce52aacf4cf29949dd6d3eec38979ddc1bbb0b6192e34",
  "generator_bls_pubkey": "244Sywxj7PuMHpcPxemaXLcrY5rPgztra6H9Vz8cU1Ro5v23SxKTfVqr2yS7NXAXE1iq59ndn4aMZmYxuzu3Te3e9fokQKTUkYvFxYg2P2E8EEg1gWUbs3AFL2aNx62HQd7r",
  "txroot": "522addb8dae45b71ef281a76c86c6babef0678c8bc2d58d617dc33fa7722b021",
  "faultroot": "0000000000000000000000000000000000000000000000000000000000000000",
  "gas_limit": 5000000000,
  "iteration": 0,
  "prev_block_cert": {
    "result": {
      "Valid": "940d0a9a35f30103554e9d74ae504d4a3f679bda7b925df9bff1002424a5a748"
    },
    "validation": {
      "bitset": 256882,
      "aggregate_signature": "877eedaf65d9fab0b309f5f8b01df38a379612854aa6fb63009b2b3d6c92de494d79d8c612daae50e33cd3b1418a9a9e"
    },
    "ratification": {
      "bitset": 386423,
      "aggregate_signature": "a98a84b6ba9a88fde1a063538807aa35b2af1c52360bf564d9c19abd3d22ba9be9f87ce38c97b580fc05df8c920b9da4"
    }
  },
  "failed_iterations": [],
  "hash": "22c7e588560a133d1c142c2fe4c067e8b500ced43d5f9ae19cf55f1caf4dd899"
}
          </pre>
           
        </div>
        
        
      </dd>
    </dl>
  </div>
  
   
</div>
`;
